--- a/index.html
+++ b/index.html
@@ -1459,5 +1459,22 @@ color:#fff;
 z-index:999;">
 admin
 </button>
+  <style>
+  .admin-btn{
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    padding: 8px 14px;
+    background: black;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+</style>
+
+<button class="admin-btn" onclick="window.location.href='admin.html'">
+  Admin Login
+</button>
 </body>
   </html>
