--- a/intro.html
+++ b/intro.html
@@ -290,9 +290,8 @@
 
 <script>
   setTimeout(function () {
-    window.location.href = "index.html";
- https://theycallhimv.github.io/CCV/  
-  }, 4200); 
+    window.location.href ="https://theycallhimv.github.io/CCV/";
+  }, 4200) ;
  </script>
 
 </body>
