Update and rename intro.html to index.html

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
 <script>
   setTimeout(function () {
-    window.location.href ="https://theycallhimv.github.io/CCV/";
+    window.location.href ="main.html";
   }, 4200) ;
  </script>
 
