--- a/main.html
+++ b/main.html
@@ -691,7 +691,7 @@
         <div class="error" id="errorBox"></div>
       </div>
       <div id="qrSection" class="qr-section">
-  <div class="qr-title">Open this converter on your phone</div>
+  <div class="qr-title">Open this converter on your phone for better version of this website</div>
   <div id="qrCodeBox"></div>
   <div class="qr-note">Scan with your mobile camera to open this same page.</div>
 </div>
